# tinycv

./: .gitmodules  CMakeLists.txt  README.md
experiments/: homography_from_corresps.m
src/experiments/: derivative_vs_hessian.m  mi_vs_derivative.m  mutial_information_space.m  mutual_information_space.m
src/experiments/data/: bilateral.txt  bilinear.txt  jitter.txt  nearest_neighbor.txt  perspective_bilinear.txt  perspective_jitter.txt  perspective_scaled_bilateral.txt  perspective_scaled_bilinear.txt  perspective_scaled_jitter.txt  perspective_scaled_nn.txt  translate_bilinear.txt  translate_scaled_bilinear.txt
src/extra/giwtype/: tinycv.py
src/libmir/: bounding_box.cpp  bounding_box.h  derivative.h  histogram.h  interpolation.h  mat.cpp  mat.h  math.h  mutual_information.h  registration.cpp  registration.h  sat.cpp  sat.h  template_utils.h  test.h  transform.h
src/mirtool/: main.cpp
src/samples/: mutual_information_registration.cpp
src/tinycv/: bounding_box.cpp  bounding_box.h  bounding_box.hpp  derivative.h  histogram.cpp  histogram.h  interpolation.h  mat.cpp  mat.h  mat.hpp  math.h  mutual_information.h  registration.cpp  registration.h  registration.hpp  sat.cpp  sat.h  sat.hpp  template_utils.h  test.h  tinycv.h  transform.h
src/tinycv/draw/: line.cpp  line.h  line.hpp
